--- a/style.css
+++ b/style.css
@@ -64,3 +64,10 @@ footer {
     background: #b9b9b9;
     color: #fff;
 }
+
+.coral-pixels-regular {
+  font-family: "Coral Pixels", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
