--- a/assets/css/gt2.css
+++ b/assets/css/gt2.css
@@ -5,7 +5,7 @@
 :root {
   --gt2-bg: #0b0e14;
   --gt2-panel: #151a22;
-  --gt2-text: #e6e6e6;
+  --gt2-text: #fc6209;
   --gt2-muted: #9aa0aa;
   --gt2-red: #c4161c;
   --gt2-blue: #1f3a5f;
